# cubical-pairings

./: .gitignore  LICENSE  README.md
cubical_pairing_rs/: .gitignore  Cargo.toml
cubical_pairing_rs/benches/: bench_arithmetic.rs  bench_compression.rs  bench_pairing_sidh.rs  bench_pairing_sqisign.rs  tate_bench.rs  tate_bench_even_only.rs  util.rs  weil_bench.rs  weil_bench_even_only.rs
cubical_pairing_rs/scripts/: gen_fp.sage  gen_test_data_sidh.sage  gen_test_data_sqisign.sage  gen_test_point_compression.sage
cubical_pairing_rs/src/: csidh_fields.rs  cubical_pairings.rs  lib.rs  sidh_fields.rs  sqisign_fields.rs  test_cubical_pairings_sidh.rs  test_cubical_pairings_sqisign.rs  test_point_compression.rs
cubical_pairing_rs/src/finitefield/: fp2_gen.rs  fp_gen.rs
cubical_pairing_rs/src/test_data/: compression_five.rs  compression_one.rs  compression_three.rs  mod.rs  sidh_five.rs  sidh_one.rs  sidh_three.rs  sqisign_five.rs  sqisign_one.rs  sqisign_three.rs
operation_count_sage/: csidh_supersingularity_verif.py  cubical_arithmetic.py  dctidh_public_keys.py  dctidh_torsion_point_verif.py  jacobian_pairing.py  sike-compression.py  sqi_compression.py  utilities.py
